feat: Fix Schema.org language validation by removing invalid proficiencyLevel and adding Swedish language

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,9 +61,22 @@ const structuredData = {
       })),
       "sameAs": personalInfo.socialLinks.map(link => link.url).filter(url => url.startsWith('http')),
       "knowsLanguage": [
-        { "@type": "Language", "name": "English", "proficiencyLevel": "Professional" },
-        { "@type": "Language", "name": "Bengali", "proficiencyLevel": "Native" },
-        { "@type": "Language", "name": "Hindi", "proficiencyLevel": "Native" }
+        {
+          "@type": "Language",
+          "name": "English"
+        },
+        {
+          "@type": "Language", 
+          "name": "Bengali"
+        },
+        {
+          "@type": "Language",
+          "name": "Hindi"
+        },
+        {
+          "@type": "Language",
+          "name": "Swedish"
+        }
       ],
       "makesOffer": [
         {
